Fix dark mode: Set list-group-item background to transparent in CV

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -218,3 +218,12 @@ ul.timeline li::before {
      color: var(--global-text-color);
 }
 */
+
+/*****************************
+ * Dark Mode Fixes
+ *****************************/
+
+li.list-group-item {
+  background-color: transparent !important;
+  border: none;
+}
